# malpractice

./: .gitignore  Cargo.toml  Containerfile  TODO  justfile  notes.txt  render.txt  scenegraph.txt  sprite.toml  test_scene.tcl  test_scene.toml
.config/: config.toml
.devcontainer/: devcontainer.json
asset_formats/: Cargo.toml
asset_formats/src/: dds.rs  lib.rs
asset_formats/src/bcn/: bc4.rs  bc5.rs  bc7.rs  util.rs
asset_formats/src/bcn/bc7/: palette.rs  partitions.rs
docs/research/: Asset Pipeline.md
examples/: hello.rs
examples/flappy_bird/: background.rs  bird.rs  dead.rs  game.rs  main.rs  menu.rs  ui.rs
hello_game/: Cargo.toml  justfile  manifest.yaml
hello_game/src/: app.rs  lib.rs  main.rs
sdfgen/: Cargo.toml
sdfgen/src/: main.rs
src/: app.rs  bench.rs  bus.rs  components.rs  config.rs  console.rs  event.rs  input.rs  lib.rs  net.rs  render.rs  smol.rs  utils.rs  window.rs  world.rs
src/app/: controller.rs  stage.rs  stage_builder.rs
src/assets/: android.rs  asset_manager.rs  fs.rs  platform.rs
src/input/: action.rs  event.rs  handler.rs
src/render/: components.rs  context.rs  grr.rs  state.rs  texture.rs  timestamp.rs  vertex.rs
src/render/grr/: context.rs  error.rs  handles.rs  shaders.rs
