[workspace]
members = [ "asset_formats", "sdfgen"]

[workspace.package]
version = "0.1.0"

[package]
name = "rivik"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5.9"
winit = { version = "0.29.10", features = ["rwh_05", "rwh_04"] }
once_cell = "1.19.0"
async-executor = "1.8.0"
async-io = "2.3.0"
futures = "0.3.30"
grr = "0.8.0"
raw-gl-context = "0.1"
bytemuck = { version = "1.14.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"
thiserror = "1.0.56"
glam = { version = "0.25.0" ,features = ["mint", "bytemuck"]}

[dev-dependencies]
anyhow = "1.0.79"
image = "0.24.8"
glam = { version = "0.25.0" ,features = ["mint"]}
