[workspace]
members = [ "asset_formats", "hello_game", "sdfgen"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
egui = {git = "https://github.com/emilk/egui" }
winit = { version = "0.30.2", features = ["android-native-activity"]}

[package]
name = "rivik"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5.9"
once_cell = "1.19.0"
async-executor = "1.8.0"
winit = { workspace = true }
async-io = "2.3.0"
futures = "0.3.30"
bytemuck = { version = "1.14.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"
thiserror = "1.0.56"
glam = { version = "0.25.0" ,features = ["mint", "bytemuck"]}
wgpu = "22.0.0"
pollster = "0.3.0"
toml = "0.8.15"
hecs = "0.10.5"
image = "0.24.8"
tobj = { version = "4.0.2", features = ["log"] }
serde = { version = "1.0.204", features = ["derive"] }
devtimer = "4.0.1"
egui-winit = { git = "https://github.com/emilk/egui", default-features = false }
egui-wgpu = { git = "https://github.com/emilk/egui" }
egui = { workspace = true }
dirs = "5.0.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9.0"

[dev-dependencies]
anyhow = "1.0.79"
image = "0.24.8"
glam = { version = "0.25.0" ,features = ["mint"]}
env_logger = "*"
