[package]
name = "hello_game"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rivik = { path = ".." }
env_logger = "0.11.5"
glam = "0.28.0"
winit = { version = "0.30.2", features = ["android-native-activity"] }
hecs = "0.10.5"
egui = { workspace = true }