[package]
name = "hello_game"
edition = "2021"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rivik = { path = ".." }
env_logger = "0.11.5"
glam = "0.28.0"
winit = { workspace = true }
hecs = "0.10.5"
egui = { workspace = true }
log = "0.4.22"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
