[package]
name = "sdfgen"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rivik = { path = ".." }
tracing = "0.1.40"
ab_glyph = "0.2.23"
clap = { version = "4.4.18", features = ["cargo"]}
anyhow = "1.0.79"
image = "0.24.8"